# rzv_ai_apps

./: .gitignore  .gitmodules
03_Elderly_fall_detection/src/: MeraDrpRuntimeWrapper.cpp  define.h  elderly_fall_detection.cpp
05_Age_gender_detection/exe_v2h/: demo_init.sh  imdtdemo.service
05_Age_gender_detection/src/: BGRShader.cpp  BGRShader.hpp  CMakeLists.txt  MeraDrpRuntimeWrapper.cpp  age_gender_detection.cpp  define.h  fragment_shader.glsl  glUtil.cpp  glUtil.hpp  inference.hpp  statisticsPlot.cpp  statisticsPlot.hpp  v4lUtil.cpp  v4lutil.hpp  vertex_shader.glsl
05_Age_gender_detection/src/gl_demo/: gl_demo.cpp  memcpy.cpp
05_Age_gender_detection/src/toolchain/: runtime.cmake
09_Human_gaze_detection/: README.md
09_Human_gaze_detection/exe_v2h/: human_gaze_detection_app
09_Human_gaze_detection/src/: define.h  human_gaze_detection.cpp
13_Car_ahead_departure_detection/: README.md
13_Car_ahead_departure_detection/exe_v2h/: car_departure_app
13_Car_ahead_departure_detection/src/: car_departure.cpp  define.h
